--- a/gb/22/2/19/n13590269.md
+++ b/gb/22/2/19/n13590269.md
@@ -1,56 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zpvkob3814/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zpvkob3814/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zpvkob3814/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zpvkob3814/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zpvkob3814/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zpvkob3814/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>前校长赞佩神韵完美出色 向艺术总监致敬</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>前音乐教师：神韵是奇观 令人惊叹</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13590276-220219172647100615-600x400.jpg" />
-<h6>前学校校长、音乐教师Richard Di Blassio于2022年2月19日在宾州费城玛丽安剧院观看了神韵巡回艺术团的演出后，盛赞神韵的方方面面，并惊叹音乐与舞蹈配合的天衣无缝。他说，“不知哪位高人创造了这些音乐，我都向他祝贺，太惊人了。”（卫泳/大纪元）
+<h6>2022年2月19日下午，前中学校长、音乐教师Richard Di Blassio在宾州费城玛丽安剧院观看了神韵巡回艺术团的演出后，盛赞神韵的方方面面。（卫泳/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年02月20日讯】（大纪元记者卫泳费城报导）“不知哪位高人创造了这些音乐，我向他祝贺，太惊人了。”前中学校长、音乐教师Richard Di Blassio盛赞<ahref="https://github.com/zpvkob3814/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的方方面面，并惊叹音乐与舞蹈配合的天衣无缝。</p>
-<p>Richard Di Blassio退休前是一位中学校长和音乐老师，几年前从特拉华州搬到费城。他于2月19日在<ahref="https://github.com/zpvkob3814/djy/blob/master/gb/tag/%E5%AE%BE%E5%B7%9E%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md#1">宾州费城玛丽安剧院</a>（Merriam Theater）观看了<ahref="https://github.com/zpvkob3814/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>巡回艺术团的演出。</p>
-<p>“我们一下子就爱上了这些舞蹈、音乐以及背景，”他说，“是艺术总监先生设计了今年的天幕，真是奇观。”</p>
-<p>作为搞了一辈子音乐的人，Di Blassio特别惊叹于神韵交响乐与舞蹈之间的配合，“我看着舞蹈，听着音乐，我看到了音乐与舞蹈演员之间配合的精准，太棒了！太棒了！”</p>
-<p>Di Blassio还称赞了神韵现场交响乐团的指挥。,</p>
-<p>“指挥整个乐团的先生也需要受到表扬，我想他的平衡真太美了，在弦乐之间、铜管乐器和木管乐器之间的平衡，有些时刻非常感人，很多时候都非常激动人心，我真的喜欢。”</p>
-<p>他盛赞神韵的整台节目“完美”、“出色”；当舞台上的神佛展现时，他感受到了共鸣。</p>
-<p>“我和我们全家都有一种信仰上的联系，这对我来讲非常重要。”Di Blassio说，“一开始我就感受到了一种永恒的宁静。”</p>
+	<p>【大纪元2022年02月20日讯】（大纪元记者卫泳费城报导）“不知哪位高人创造了这些<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>）音乐，我向他祝贺，太令人惊叹了。”前中学校长、音乐教师Richard Di Blassio赞叹<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E9%9F%B3%E4%B9%90.md#1">神韵音乐</a>与舞蹈配合得天衣无缝，并盛赞演出的高水平。</p>
+<p>Di Blassio目前还在一所社区大学教授音乐课程，同时从事音乐创作。几年前他曾观看过<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>， 2月19日当天从特拉华州赶到费城，在玛丽安剧院（Merriam Theater）再次观看了神韵艺术团的演出。</p>
+<p>“我一下子就爱上了这些舞蹈、音乐以及背景”，他说，“是艺术总监先生设计了天幕，真是奇观！”</p>
+<p>Di Blassio特别惊叹于神韵交响乐与舞蹈之间的配合，“我看着舞蹈，听着音乐，观察到音乐与舞蹈演员之间配合的精准，太棒了！太棒了！”</p>
+<p>他特别提到神韵交响乐团的指挥，“指挥整个乐团的先生需要受到表扬。他的平衡太美了，在弦乐之间的平衡，在铜管乐器和木管乐器之间的平衡。有些时刻极其感人，很多时候非常激动人心，我真的喜欢。”</p>
+<p>他盛赞神韵的整台节目“完美”“出色”，当舞台上的神佛展现时，他感受到了共鸣，“我体味到了一种永恒的宁静”。</p>
 <p>责任编辑：施萍</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13588752.md#1">机构执行主任：神韵带来能量与光明</a></li>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13588895.md#1">律师推崇神韵演出赏心悦目、动人心弦</a></li>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13588912.md#1">期待多年 牧师圆梦看秀 赞神韵是旷世之作</a></li>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13588943.md#1">尊崇法轮大法 美国会议员参选人五观神韵</a></li>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13589054.md#1">神韵华府大爆满 “法轮功正面影响社会”</a></li>
-<li><a href="https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13589126.md#1">教授赞叹神韵：实在好看、耐人寻味</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588752.md#1">机构执行主任：神韵带来能量与光明</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588895.md#1">律师推崇神韵演出赏心悦目、动人心弦</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588912.md#1">期待多年 牧师圆梦看秀 赞神韵是旷世之作</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588943.md#1">尊崇法轮大法 美国会议员参选人五观神韵</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13589054.md#1">神韵华府大爆满 “法轮功正面影响社会”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13589126.md#1">教授赞叹神韵：实在好看、耐人寻味</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/oluwgd3313/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zpvkob3814/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zpvkob3814/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13590269.htm">前校长赞佩神韵完美出色 向艺术总监致敬</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13590269.htm">前音乐教师：神韵是奇观 令人惊叹</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zpvkob3814/djy/blob/master/gb/22/2/19/n13590269.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zpvkob3814/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zpvkob3814/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zpvkob3814/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zpvkob3814/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zpvkob3814/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13590269.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
